RESOLVED FIXED24991
ASSERTION FAILED: !o || o->isBox() on http://qantas.com/mobile
https://bugs.webkit.org/show_bug.cgi?id=24991
Summary ASSERTION FAILED: !o || o->isBox() on http://qantas.com/mobile
Simon Fraser (smfr)
Reported 2009-04-01 12:10:49 PDT
If you set your user agent to be the iPhone user agent, and load <http://qantas.com/mobile>, then this assertion fires: ASSERTION FAILED: !o || o->isBox() in RenderObject::transformFromContainer().
Attachments
Patch (1.38 KB, patch)
2009-04-01 12:25 PDT, Simon Fraser (smfr)
hyatt: review+
Simon Fraser (smfr)
Comment 1 2009-04-01 12:25:30 PDT
Dave Hyatt
Comment 2 2009-04-01 12:26:26 PDT
Comment on attachment 29174 [details] Patch r=me
Simon Fraser (smfr)
Comment 3 2009-04-01 12:27:19 PDT
Note You need to log in before you can comment on or make changes to this bug.