2009-04-01  Simon Fraser  <simon.fraser@apple.com>

Reviewed by Dave Hyatt

        https://bugs.webkit.org/show_bug.cgi?id=24991

        Need to use toRenderBoxModelObject(), not toRenderBox(), to test for layer()
        when getting the transform.

        * rendering/RenderObject.cpp:
        (WebCore::RenderObject::transformFromContainer):

Canonical link: https://commits.webkit.org/34206@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@42151 268f45cc-cd09-0410-ab3c-d52691b4dbfc