WebCore/rendering/RenderObject.cpp
@@ -1702,7 +1702,7 @@ TransformationMatrix RenderObject::transformFromContainer(const RenderObject* co
     TransformationMatrix containerTransform;
     containerTransform.translate(offsetInContainer.width(), offsetInContainer.height());
     RenderLayer* layer;
-    if (hasLayer() && (layer = toRenderBox(this)->layer()) && layer->transform())
+    if (hasLayer() && (layer = toRenderBoxModelObject(this)->layer()) && layer->transform())
         containerTransform.multLeft(layer->currentTransform());
     
 #if ENABLE(3D_RENDERING)
